# asmtp

./: 404.html  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  asmtp.html  index.html  introduction.html  keynesis.html  noise.html  poldercast.html  print.html  searchindex.js  searchindex.json
.github/workflows/: ci_checks.yml  docs.yml  release.yml
asmtp-cli/: Cargo.toml
asmtp-cli/src/: command.rs  lib.rs  settings.rs  state.rs  style.rs
asmtp-client/: Cargo.toml
asmtp-client/src/: lib.rs  message.rs  state.rs  style.rs
asmtp-client/src/app/: key.rs  keys.rs  mod.rs  network.rs  passport.rs  passports.rs
asmtp-client/src/event/: key.rs
asmtp-client/src/screen/: error.rs  id.rs  mod.rs  splash.rs
asmtp-client/src/screen/new/: mod.rs  passport_choice.rs  set_device.rs
asmtp-client/src/ui/: focus.rs  mod.rs
asmtp-client/src/ui/pages/: keys.rs  messages.rs  mod.rs  passports.rs  settings.rs
asmtp-client/src/ui/widget/: mod.rs  new_key.rs  new_passport.rs
asmtp-lib/: Cargo.toml
asmtp-lib/src/: entropy.rs  lib.rs  message_id.rs  passport_export.rs  passport_file.rs  passport_importer.rs  topic.rs
asmtp-network/: Cargo.toml  README.md
asmtp-network/src/: accept.rs  handle.rs  lib.rs  message.rs  net.rs  opening.rs  session_id.rs  version.rs
asmtp-network/src/codec/: encryption.rs  handshake.rs  mod.rs
asmtp-storage/: Cargo.toml
asmtp-storage/migrations/: 20210310170905_contact.sql  20210310170912_messages.sql
asmtp-storage/src/: buddies.rs  lib.rs  message.rs  messages.rs  passports.rs
asmtpd/: Cargo.toml  README.md
asmtpd/src/: config.rs  config.yaml  lib.rs  secret.rs  session_id.rs
asmtpd/src/network/: config.rs  connections.rs  mod.rs  topology.rs
asmtpd/src/rest/: config.rs  header.rs  mod.rs  session.rs  sessions.rs  state.rs
asmtpd/src/rest/api/: config.rs  mod.rs  private.rs  public.rs
asmtpd/src/rest/handler/: auth.rs  mod.rs  passport.rs  root_control.rs  topic.rs
asmtpd/src/rest/middleware/: auth.rs  mod.rs  rejection.rs
asmtpd/src/storage/: config.rs  gossips.rs  mod.rs
ci/: pack-assets.py  release-info.py  strip-own-version-from-cargo-lock.pl
doc/: book.toml
doc/src/: README.md  SUMMARY.md  asmtp.md  introduction.md  keynesis.md  noise.md  poldercast.md
doc/src/keynesis/: 00_introduction.md
doc/src/noise/: 00_introduction.md
doc/src/poldercast/: 00_introduction.md
html/: 404.html  introduction.html  searchindex.js
html/keynesis/: 00_introduction.html
html/noise/: 00_introduction.html
keynesis/: 00_introduction.html
noise/: 00_introduction.html
poldercast/: 00_introduction.html
