[package]
name = "asmtp-cli"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"

[dependencies]
asmtp-lib = { version = "0.1.0", path = "../asmtp-lib" }
asmtp-storage = { version = "0.1.0", path = "../asmtp-storage" }
asmtp-network = { version = "0.1.0", path = "../asmtp-network" }
whoami = "1.1.0"
poldercast = { version = "1.1.3" }
structopt = "0.3.21"
directories = "3.0.1"
sled = "0.34.6"
tokio = { version = "1.3", features = ["full"]}
futures = "0.3.13"
dialoguer = "0.7.1"
indicatif = "0.15"
console = "0.13"
chrono = "0.4.19"
humantime = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0.38" }
keynesis = { version = "1.3.4" }
cryptoxide = { version = "0.3" }
hex = { version = "0.4" }
rand = "0.8"