[package]
name = "asmtp-client"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asmtp-lib = { version = "0.1.0", path = "../asmtp-lib" }
iced = { version = "0.2.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0.38" }
keynesis = { version = "1.3.1" }
hex = { version = "0.4" }
rand = "0.8"
tokio = { version = "0.3", features = [  ] }