[package]
name = "asmtp-client"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asmtp-lib = { version = "0.1.0", path = "../asmtp-lib" }
asmtp-storage = { version = "0.1.0", path = "../asmtp-storage" }
asmtp-network = { version = "0.1.0", path = "../asmtp-network" }

keynesis = { version = "1.3.4" }
poldercast = { version = "1.1" }
serde = { version = "1.0", features = [ "derive" ] }
tui = { version = "0.14.0", features = ["crossterm"], default-features = false }
crossterm = "0.19"
arboard = "1.1.0"
futures = { version = "0.3" }
tokio = { version = "1.3", features = ["full"] }
serde_yaml = { version = "0.8" }
structopt = "0.3.21"
directories = "3.0.1"
anyhow = { version = "1.0.38" }
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"