[package]
name = "asmtp-lib"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/primetype/asmtp"
documentation = "https://docs.rs/asmtp-network"
homepage = "https://github.com/primetype/asmtp"
categories = ["network"]
keywords = ["cryptography", "ASMTP"]
description = "network library for ASMTP"
exclude = [
    ".gitignore",
]

[dependencies]
poldercast = { version = "1.1.2" }
keynesis = { version = "1.3.0" }
cryptoxide = { version = "0.3.0" }

serde = { version = "1.0", features = ["derive"] }
hex =  { version = "0.4" }
rand_core = "0.6"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"