[package]
name = "asmtp-storage"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asmtp-lib = { version = "0.1", path = "../asmtp-lib" }

poldercast = { version = "1.1.3" }
keynesis = { version = "1.3.4" }

anyhow = { version = "1.0.38" }
lru = { version = "0.6.5" }
sled = { version = "0.34.6" }
futures = { version = "0.3.13" }