[package]
name = "asmtp-storage"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asmtp-lib = { version = "0.1", path = "../asmtp-lib" }

poldercast = { version = "1.2" }
keynesis = { version = "1.4" }

anyhow = { version = "1.0" }
lru = { version = "0.6" }
futures = { version = "0.3" }
chrono = { version = "0.4" }
sqlx = { version = "0.5", default-features = false, features = [ "sqlite", "macros", "chrono", "runtime-tokio-rustls", "migrate" ] }

[dev-dependencies]
tokio = { version = "1.4", features = [ "full" ] }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }