[package]
name = "asmtpd"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/primetype/asmtp"
documentation = "https://docs.rs/asmtp-network"
homepage = "https://github.com/primetype/asmtp"
categories = ["network"]
keywords = ["cryptography", "ASMTP"]
description = "network library for ASMTP"
exclude = [
    ".gitignore",
]

[dependencies]
asmtp-lib = { version = "0.1", path = "../asmtp-lib" }
asmtp-network = { version = "0.1", path = "../asmtp-network" }
asmtp-storage = { version = "0.1", path = "../asmtp-storage" }
poldercast = { version = "1.2" }
keynesis = { version = "1.4" }

sled = "0.34"
tokio = { version = "1.4", features = [ "full" ] }
tokio-util = { version = "0.6", features = [ "codec" ] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
futures = "0.3"
lru = "0.6"
indexmap = "1.6"
bytes = { version = "1.0" }
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
chrono = "0.4"

# both bins
structopt = "0.3.21"
serde_yaml = "0.8"

# asmtpd-cli only
dialoguer = "0.8.0"